--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,6 @@
   border: 0;
 }
 
-/* .user-data-modal-window__standart-checkbox {
-  cursor: pointer;
-} */
-
 .page {
   font-family: Roboto, sans-serif;
   font-size: 14px;
@@ -246,19 +242,23 @@
   display: flex;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.7);
   opacity: 1;
-  transform: scale(1);
+  /* transform: scale(1); */
   /* transform-origin: top left; */
-  transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* transform 1000ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.is-hidden {
+.backdrop.is-hidden {
   /* transform-origin: bottom right; */
-  transform: scale(0);
+  /* transform: scale(0); */
   opacity: 0;
   pointer-events: none;
+}
+
+.backdrop.is-hidden .user-data-modal-window {
+  transform: scale(0);
 }
 
 .user-data-modal-window {
@@ -270,6 +270,9 @@
   padding: 40px;
   border-radius: 4px;
   background-color: #ffffff;
+
+  transform: scale(1);
+  transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .user-data-modal-window__btn-close {
